feat: implement validations

--- a/pages/fieldManagement.html
+++ b/pages/fieldManagement.html
@@ -493,7 +493,7 @@
 
                   <div class="mb-4 relative" id="dropdownContainer">
                     <label class="block text-gray-700 text-sm font-bold mb-2">
-                      Select Fields
+                      Select Staff
                     </label>
                     <div class="relative">
                       <div
@@ -516,7 +516,7 @@
                           type="text"
                           id="searchInput"
                           class="w-full focus:outline-none"
-                          placeholder="Search fields..."
+                          placeholder="Search Staff..."
                         />
                         <svg
                           class="w-4 h-4 text-gray-500"
@@ -538,7 +538,7 @@
                   </div>
                   <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2">
-                      Selected Fields
+                      Selected Staff
                     </label>
                     <div
                       id="selectedFields"
