--- a/pages/staffManagement.html
+++ b/pages/staffManagement.html
@@ -195,7 +195,9 @@
                     </label>
                     <input
                       type="text"
-                      id="firstName"
+                      id="firstName" 
+                      minlength="3" 
+                      maxlength="50" 
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                       required
                     />
@@ -207,6 +209,8 @@
                     <input
                       type="text"
                       id="lastName"
+                      minlength="3" 
+                      maxlength="50" 
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                       required
                     />
@@ -218,6 +222,8 @@
                     <input
                       type="text"
                       id="designation"
+                      minlength="3" 
+                      maxlength="50" 
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                       required
                     />
@@ -245,7 +251,10 @@
                     <input
                       type="text"
                       id="addressLine01"
+                      minlength="3" 
+                      maxlength="50" 
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                      required
                     />
                   </div>
                   <div class="mb-4">
