--- a/pages/userManagement.html
+++ b/pages/userManagement.html
@@ -157,6 +157,7 @@
                       type="email"
                       id="email"
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                      maxlength="100"
                       required
                     />
                   </div>
@@ -168,7 +169,7 @@
                       type="password"
                       id="password"
                       class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                      
+                      required
                     />
                   </div>
                 </div>
