feat: implement role based rendering

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   type="email"
                   placeholder="Email address"
                   class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent"
+                  required
                 />
               </div>
 
@@ -80,7 +81,10 @@
                 <input
                   type="password"
                   placeholder="Password"
+                  min="5"
+                  max="20"
                   class="block w-full pl-10 pr-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent"
+                  required
                 />
               </div>
             </div>
