--- a/pages/cropDetailManagement.html
+++ b/pages/cropDetailManagement.html
@@ -163,8 +163,8 @@
           class="fixed inset-0 h-fit mx-auto my-auto p-5 border max-w-3xl shadow-lg rounded-md bg-white"
         >
           <div class="mt-3">
-            <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">
-              Add New Log
+            <h3 id="modalTitle" class="text-lg font-medium leading-6 text-gray-900 mb-4">
+              Add Log
             </h3>
             <form id="logForm">
               <div class="grid grid-cols-2 gap-8">
@@ -521,7 +521,7 @@
                   id="saveLogBtn"
                   class="bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600 focus:outline-none focus:shadow-outline"
                 >
-                  Save Log
+                  Confirm
                 </button>
               </div>
             </form>
