--- a/pages/cropManagement.html
+++ b/pages/cropManagement.html
@@ -174,8 +174,8 @@
           class="fixed inset-0 h-fit mx-auto my-auto p-5 border w-fit shadow-lg rounded-md bg-white"
         >
           <div class="mt-3">
-            <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">
-              Add New Crop
+            <h3 id="modalTitle"  class="text-lg font-medium leading-6 text-gray-900 mb-4">
+              Add Crop
             </h3>
             <form id="cropForm">
               <div class="grid grid-cols-2 gap-8">
@@ -393,7 +393,7 @@
                   id="saveCropBtn"
                   class="bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600 focus:outline-none focus:shadow-outline"
                 >
-                  Save Crop
+                  Confirm
                 </button>
               </div>
             </form>
