--- a/pages/equipmentManagement.html
+++ b/pages/equipmentManagement.html
@@ -173,8 +173,8 @@
           class="fixed inset-0 h-fit mx-auto my-auto p-5 border w-fit shadow-lg rounded-md bg-white"
         >
           <div class="mt-3">
-            <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">
-              Add New Equipment
+            <h3 id="modalTitle"  class="text-lg font-medium leading-6 text-gray-900 mb-4">
+              Add Equipment
             </h3>
             <form id="equipmentForm">
               <div class="grid sm:grid-cols-2 gap-8">
@@ -272,7 +272,7 @@
                   id="saveEquipmentBtn"
                   class="bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600 focus:outline-none focus:shadow-outline"
                 >
-                  Save Equipment
+                  Confirm
                 </button>
               </div>
             </form>
