--- a/pages/staffManagement.html
+++ b/pages/staffManagement.html
@@ -172,8 +172,8 @@
           class="fixed inset-0 h-fit mx-auto my-auto p-5 border w-fit shadow-lg rounded-md bg-white"
         >
           <div class="mt-3">
-            <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">
-              Add New Staff
+            <h3 id="modalTitle"  class="text-lg font-medium leading-6 text-gray-900 mb-4">
+              Add Staff
             </h3>
             <form id="staffForm">
               <div class="grid sm:grid-cols-3 gap-8">
@@ -375,7 +375,7 @@
                   id="saveStaffBtn"
                   class="bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600 focus:outline-none focus:shadow-outline"
                 >
-                  Save Staff
+                  Confirm
                 </button>
               </div>
             </form>
