--- a/pages/vehicleManagement.html
+++ b/pages/vehicleManagement.html
@@ -171,8 +171,8 @@
           class="fixed inset-0 h-fit mx-auto my-auto p-5 border w-fit  shadow-lg rounded-md bg-white"
         >
           <div class="mt-3">
-            <h3 class="text-lg font-medium leading-6 text-gray-900 mb-4">
-              Add New Vehicle
+            <h3 id="modalTitle" class="text-lg font-medium leading-6 text-gray-900 mb-4">
+              Add Vehicle
             </h3>
             <form id="vehicleForm">
               <div class="grid sm:grid-cols-2 gap-8">
@@ -278,7 +278,7 @@
                   type="submit" id="saveVehicleBtn"
                   class="bg-green-500 text-white font-bold py-2 px-4 rounded hover:bg-green-600 focus:outline-none focus:shadow-outline"
                 >
-                  Save Vehicle
+                  Confirm
                 </button>
               </div>
             </form>
