--- a/pages/userManagement.html
+++ b/pages/userManagement.html
@@ -7,6 +7,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="/assets/css/styles.css">
     <style>
       body {
         font-family: "Inter", sans-serif;
