--- a/pages/main.html
+++ b/pages/main.html
@@ -31,7 +31,7 @@
                 <a
                   href="#"
                   data-src="/pages/dashboard.html"
-                  class="nav-link flex items-center p-3 text-gray-600 hover:bg-gray-50 rounded-lg"
+                  class="nav-link flex items-center bg-green-50 p-3 text-gray-600 hover:bg-gray-50 rounded-lg"
                 >
                 <img class="w-5 h-5 mr-3" src="/assets/images/icons/dashboard.svg" alt="dashboard">
                   Dashboard
@@ -113,7 +113,7 @@
 
           <!-- Logout Button -->
           <div class="p-4 border-t">
-            <button
+            <button id="logOutButton"
               class="flex items-center w-full p-3 text-red-600 hover:bg-red-50 rounded-lg"
             >
             <img  class="w-5 h-5 mr-3" src="/assets/images/icons/logout.svg" alt="logout">
