--- a/pages/fieldManagement.html
+++ b/pages/fieldManagement.html
@@ -9,10 +9,20 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+
     <style>
       body {
         font-family: "Inter", sans-serif;
       }
+      #map {
+      height: 300px;
+      width: 350px;
+      border-radius: 0.5rem;
+      margin-bottom: 1rem;
+    }
+   
     </style>
   </head>
   <body class="bg-gray-50">
@@ -158,13 +168,13 @@
       <!-- Field Modal -->
       <div
         id="fieldModal"
-        class="fixed inset-0 bg-gray-600 bg-opacity-50 hidden overflow-y-auto h-full w-full"
+        class="fixed inset-0 bg-gray-600 bg-opacity-50 hidden overflow-y-auto h-full w-full z-50"
       >
         <div
           class="fixed inset-0 h-fit mx-auto my-auto p-5 border max-w-3xl shadow-lg rounded-md bg-white"
         >
-          <div class="mt-3">
-            <h3 id="modalTitle" class="text-lg font-medium leading-6 text-gray-900 mb-4">
+          <div>
+            <h3 id="modalTitle" class="text-lg font-medium leading-6 text-gray-900 mb-2">
               Add Field
             </h3>
             <form id="fieldForm">
@@ -192,6 +202,9 @@
                       required
                     />
                   </div>
+                  <div class="relative">
+                    <div id="map"></div>
+                  </div>
                   <div class="mb-4 grid grid-cols-2 gap-4">
                     <div>
                       <label class="block text-gray-700 text-sm font-bold mb-2">
@@ -199,7 +212,7 @@
                       </label>
                       <input
                         type="number"
-                        step="0.1"
+                        step="0.000001"
                         id="latitude"
                         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                         required
@@ -211,19 +224,33 @@
                       </label>
                       <input
                         type="number"
-                        step="0.1"
+                        step="0.000001"
                         id="longitude"
                         class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
                         required
                       />
                     </div>
                   </div>
+                  <div>
+                    <label class="block text-gray-700 text-sm font-bold mb-2">
+                      Extent Size (hectares)
+                    </label>
+                    <input
+                      type="number"
+                      step="0.1"
+                      id="extentSize"
+                      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                      required
+                    />
+                  </div>
+                </div>
+                <div>
                   <div class="mb-4" data-field="image1">
                     <div class="bg-white rounded-lg shadow-sm">
                       <!-- Drag & Drop Zone -->
                       <div
                         id="dropZone"
-                        class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center transition-all duration-200 relative"
+                        class="border-2 border-dashed border-gray-300 rounded-lg p-4 text-center transition-all duration-200 relative"
                       >
                         <!-- Initial Upload State -->
                         <div id="uploadState" class="space-y-4">
@@ -343,26 +370,12 @@
                       </div>
                     </div>
                   </div>
-                  <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2">
-                      Extent Size (hectares)
-                    </label>
-                    <input
-                      type="number"
-                      step="0.1"
-                      id="extentSize"
-                      class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-                      required
-                    />
-                  </div>
-                </div>
-                <div>
                   <div class="mb-4"  data-field="image2" >
                     <div class="bg-white rounded-lg shadow-sm">
                       <!-- Drag & Drop Zone -->
                       <div
                         id="dropZone"
-                        class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center transition-all duration-200 relative"
+                        class="border-2 border-dashed border-gray-300 rounded-lg p-4 text-center transition-all duration-200 relative"
                       >
                         <!-- Initial Upload State -->
                         <div id="uploadState" class="space-y-4">
@@ -541,7 +554,7 @@
                   </div>
                 </div>
               </div>
-              <div class="flex items-center justify-end mt-4">
+              <div class="flex items-center justify-end">
                 <button
                   id="cancelFieldBtn"
                   type="button"
