feat: implement settings

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Modern Login Page</title>
+    <title>Login - Green Shadow</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link
@@ -30,7 +30,7 @@
       <div class="w-full md:w-[30%] p-8 flex flex-col justify-center bg-white">
         <div class="max-w-md w-full mx-auto space-y-8">
           <div class="text-center">
-            <h2 class="mt-6 text-3xl font-bold text-green-500">Green Shadow</h2>
+            <img src="/assets/images/logo.png" alt="logo" class="h-10 mx-auto" />
             <p class="mt-2 text-sm text-gray-600">
               Please sign in to your account
             </p>
