--- a/pages/main.html
+++ b/pages/main.html
@@ -21,7 +21,7 @@
         <div class="h-full flex flex-col">
           
           <div class="p-4 border-b">
-            <h2 class="text-2xl font-bold text-green-500">Green Shadow</h2>
+            <img src="/assets/images/logo.png" alt="logo" class="h-7 mx-auto" />
           </div>
 
           
@@ -106,6 +106,16 @@
                 >
                  <img src="/assets/images/icons/vehicle.svg" class="w-5 h-5 mr-3" alt="vehicle">
                   Vehicle
+                </a>
+              </li>
+              <li>
+                <a
+                  href="#"
+                  data-src="/pages/settingsManagement.html"
+                  class="nav-link flex items-center p-3 text-gray-600 hover:bg-gray-50 rounded-lg"
+                >
+                 <img src="/assets/images/icons/settings.svg" class="w-5 h-5 mr-3" alt="settings">
+                  Settings
                 </a>
               </li>
             </ul>
