--- a/pages/signup.html
+++ b/pages/signup.html
@@ -30,7 +30,7 @@
       <div class="w-full md:w-[30%] p-8 flex flex-col justify-center bg-white">
         <div class="max-w-md w-full mx-auto space-y-8">
           <div class="text-center">
-            <h2 class="mt-6 text-3xl font-bold text-green-500">Green Shadow</h2>
+            <img src="/assets/images/logo.png" alt="logo" class="h-10 mx-auto" />
             <p class="mt-2 text-sm text-gray-600">
               Create your account
             </p>
